syntax = "proto3";

message TEventTraits {
    int64 Timestamp = 1;
    bool IsVoiceInput = 2;
}

message TEvent {
    TEventTraits Traits = 1;
    bytes SessionLog = 2;
}

message TCollapsedLog {
    bytes MessageId = 1;
    repeated TEvent Events = 2;
}
